<resources>
    <string name="app_name">SmartCoffee</string>
    <string name="action_settings">Settings</string>
    <string name="make_coffee">Make Coffee</string>
    <string name="time">Time:</string>
    <string name="alarm_name_placeholder">Alarm Name Placeholder</string>
    <string name="_06_00">06:00</string>
    <string name="alarm_name">Alarm Name</string>
    <string name="save">Save</string>
    <string name="alarm_saved">Alarm Saved</string>
    <string name="no_connection">Could not connect to SmartCoffee server</string>
    <string name="smartcoffee_ip">SmartCoffee IP</string>
    <string name="smartcoffee_ip_value">192.168.178.47</string>
    <string name="smartcoffee_ip_summary">Set the IP of your SmartCoffee coffee maker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_deleted">Alarm deleted</string>
    <string name="alarm_error_deleted">Failed to delete alarm</string>
    <string name="makeing_coffee">Making coffee</string>
    <string name="failed_making_coffee">Failed to make coffee</string>
    <string name="smartcoffee_ip_key">smartcoffee_ip</string>
</resources>
